--- a/eb.html
+++ b/eb.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>RNPSMUN 2022-FCC</title>
+		<title>RNPSMUN 2022</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -59,7 +59,115 @@
 
 						<!-- Content -->
 							<section id="content">
-								<p>COMING SOON!</p>
+								<article>
+									<a >
+										<div style="border-radius: 100%; text-align: center; size: 50%">
+											<img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
+											<p>
+												<h1 style="font: 1em sans-serif;  color:white">POSITION</h1>
+												<p>NAME HERE</p> 
+											</p>
+										</div>
+									</a>
+		
+								</article>
+								<article>
+									<a >
+										<div style="border-radius: 100%; text-align: center; size: 50%">
+											<img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
+											<p>
+												<h1 style="font: 1em sans-serif;  color:white">POSITION</h1>
+												<p>NAME HERE</p> 
+											</p>
+										</div>
+									</a>
+		
+								</article>
+								<article>
+									<a >
+										<div style="border-radius: 100%; text-align: center; size: 50%">
+											<img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
+											<p>
+												<h1 style="font: 1em sans-serif;  color:white">POSITION</h1>
+												<p>NAME HERE</p> 
+											</p>
+										</div>
+									</a>
+		
+								</article>
+								<article>
+									<a >
+										<div style="border-radius: 100%; text-align: center; size: 50%">
+											<img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
+											<p>
+												<h1 style="font: 1em sans-serif;  color:white">POSITION</h1>
+												<p>NAME HERE</p> 
+											</p>
+										</div>
+									</a>
+		
+								</article>
+								<article>
+									<a >
+										<div style="border-radius: 100%; text-align: center; size: 50%">
+											<img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
+											<p>
+												<h1 style="font: 1em sans-serif;  color:white">POSITION</h1>
+												<p>NAME HERE</p> 
+											</p>
+										</div>
+									</a>
+		
+								</article>
+								<article>
+									<a >
+										<div style="border-radius: 100%; text-align: center; size: 50%">
+											<img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
+											<p>
+												<h1 style="font: 1em sans-serif;  color:white">POSITION</h1>
+												<p>NAME HERE</p> 
+											</p>
+										</div>
+									</a>
+		
+								</article>
+								<article>
+									<a >
+										<div style="border-radius: 100%; text-align: center; size: 50%">
+											<img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
+											<p>
+												<h1 style="font: 1em sans-serif;  color:white">POSITION</h1>
+												<p>NAME HERE</p> 
+											</p>
+										</div>
+									</a>
+		
+								</article>
+								<article>
+									<a >
+										<div style="border-radius: 100%; text-align: center; size: 50%">
+											<img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
+											<p>
+												<h1 style="font: 1em sans-serif;  color:white">POSITION</h1>
+												<p>NAME HERE</p> 
+											</p>
+										</div>
+									</a>
+		
+								</article>
+								<article>
+									<a >
+										<div style="border-radius: 100%; text-align: center; size: 50%">
+											<img src="./images/avatar.png" style="height : 11em; width: 11em; left: 50%; border-radius: 50%;">
+											<p>
+												<h1 style="font: 1em sans-serif;  color:white">POSITION</h1>
+												<p>NAME HERE</p> 
+											</p>
+										</div>
+									</a>
+		
+								</article>
+								
 							</section>
 
 					</div>
