--- a/index.html
+++ b/index.html
@@ -355,11 +355,18 @@ setInterval('updateTimer()', 1000);
 					</header>
 					
 					<footer class="major">
-						<p style="font-size:125%;">"Electing strange perfections in every stranger I choose." - Hozier<br> 
-							She’s the kind of person you would not want to interact with on a Monday morning. Her (seemingly endless amount) energy is infectious and her laugh, even more so. But don’t be fooled, her tyranny is wrapped with the prettiest smile. Her infatuation with perfection seeps through her every action. And her tendency to be ruthlessly overachieving can be traced back to her psychotic sleep schedule. She’s the most put together person in a room, and will never back down from a fight. She is passionate, she is intelligent and she will get the job done, no questions asked. <br>
-							This is Dhruti Kedilaya, Secretary General of R-NPS MUN’23: The Seventh Edition.</p>
-
-						<ul class="actions special">
+						<p style="font-size:125%;">“Only a few know, how much one must know to know how little he knows” -Werner
+							Heisenberg <br>
+							Hardworking, determined, and deeply insightful, Dhruti is usually found engaging animatedly in
+							spirited conversations. With her love for facts and greater love for rhetoric, she’ll make sure that
+							she’s one step ahead of the rest with her methodical strategizing and impeccable research, and
+							will certainly leave you rethinking everything you said even if she cannot convince you. She also feels that most of the
+							world’s problems can be solved by asking the right questions and having a logical approach.
+							When not swimming or MUNing, you might find her reading a captivating book on Indian
+							history (or just rereading Harry Potter!) or researching the latest scientific developments. An
+							amiable and friendly person, she’ll certainly get along with you as long as you have an aversion
+							for Comic Sans too, and will make sure that you have an exhilarating and fun-filled conference!</p>
+		+				<ul class="actions special">
 							<li><a class="button" id="myBtn" class="special">LETTER FROM THE SECRETARY GENERAL</a></li>
 							<div id="myModal" class="modal">
 								<div class="modal-content">
@@ -394,10 +401,9 @@ setInterval('updateTimer()', 1000);
 					</header>
 					
 					<footer class="major">
-						<p style="font-size:125%;">"Life is a book and there are a thousand pages I have not yet read."	- Cassandra Clare, Clockwork Princess<br>
-							He’s got the kind of quiet confidence that cannot be faked; he’s the kind of intelligent that doesn’t intimidate. He’s the brightest person in the room, friendly almost to a fault. Being the nerdiest person ever, he’s the type to fanboy over computers. If you ever find yourself in a crisis (that doesn't involve running) he’s your guy. He’ll answer all your questions without a hint of condescension. Diplomat that he is, he’ll find a way to believe in every single person he meets. 
-							He has no idea how to take a compliment, but will always make sure you feel safe. He is determined, he is authentic, he is our North Star. <br>
-							This is Anirudh M, the Director General of R-NPS MUN’23: The Seventh Edition.</p>
+						<p style="font-size:125%;">He’s got the kind of quiet confidence that cannot be faked; he’s the kind of intelligent that doesn’t intimidate. He’s the brightest person in the room, friendly almost to a fault (he’s annoyingly nice). Being the nerdiest person ever, he’s the type to fangirl over computers. If you ever find yourself in a crisis (that doesn't involve running) he’s your guy. He’ll answer all your moronic questions without a hint of condescension. Diplomat that he is, he’ll find a way to believe in every single person he meets. 
+							He has no idea how to take a compliment, but will always make sure you feel safe. He is determined, he is authentic, he is our North Star. </p>
+						<p style="font-size:125%;">This is Anirudh Mydukur, the Director General of R-NPS MUN’23: The Seventh Edition.</p>
 						<ul class="actions special">
 							<li><a class="button" id="myBtn2" class="special">LETTER FROM THE DIRECTOR GENERAL</a></li>
 							<div id="myModal2" class="modal">
@@ -434,7 +440,7 @@ setInterval('updateTimer()', 1000);
 						<tbody>
 						<tr>
 						<a href='unsc.html'>
-							<div style="border-radius: 100%; text-align: center">
+							<div style="border-radius: 100%; text-align: center; font-family:EB garamond;">
 								<img src="./images/comlog/unem.jpg" style="height : 14em; width : 14em; left: 50%; border-radius: 50%; border: 2px solid gold !important;">
 								<h1 style="font: 1.3em sans-serif;  color:white ; text-transform: uppercase"
 									href='unsc.html'>United Nations Security Council</h1>
