--- a/unsc.html
+++ b/unsc.html
@@ -114,7 +114,7 @@
 								<img src="./images/Jahaan.jpg" style="box-shadow: 0px 0px 12px rgba(255, 255, 255, 0.6);height : 14em; width: 14em; left: 50%; border-radius: 50%;">
 								<p>
 									<h1 style="font: 1em perpetua;  color:white">CO - CHAIR</h1>
-									<p style = "font: 2em perpetua; color:white">Jahaan Kekreja</p> 
+									<p style = "font: 2em perpetua; color:white">Jahaan Kukreja</p> 
 								</p>
 							</div>
 						</a>
@@ -128,7 +128,7 @@
 								<p>
 									<h1 style="font: 1em perpetua;  color:white">CO - CHAIR</h1>
 
-									<p style = "font: 2em perpetua; color:white">Eshaanika Kapoor</p> 
+									<p style = "font: 2em perpetua; color:white">Eshanika Kapoor</p> 
 
 								</p>
 							</div>
